--- a/proposition-travail-bachelor/index.html
+++ b/proposition-travail-bachelor/index.html
@@ -110,7 +110,7 @@ Ray tracing et Voxels
 
 ## Problématique
 
-TODO
+> To what extent is it possible to do Voxel-based Ray Tracing with Vulkan ?
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
@@ -190,14 +190,76 @@ Parle de gestion de mémoire pour rendre des voxels avec OpenGL
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 ## Media Project anticipé
+
+Un moteur de rendu **voxel** avec du **ray tracing** en **Rust**
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+### Pourquoi Rust ?
+
+- &shy;<!-- .element: class="fragment" data-fragment-index="1" -->Plus de confort 
+- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->Memory Safe™
+- &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Développement des alternatives au C++
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+### Utilisation de Vulkan
+
+Headers C et loader les fonctions à la main ? Wrapper ?
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+#### À la main
+
+- &shy;<!-- .element: class="fragment" data-fragment-index="1" -->Meilleur contrôle
+- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->Opportunité d'apprentissage
+- &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Prends beaucoup de temps
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="attachments/Pasted image 20231210185954.png" alt="" style="object-fit: scale-down">
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="attachments/Pasted image 20231210190043.png" alt="" style="object-fit: scale-down">
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+```rust
+// Explicit returns with `Result`
+pub fn create_instance(
+	&self,
+    create_info: &vk::InstanceCreateInfo<'_>,
+    allocation_callbacks: Option<&vk::AllocationCallbacks<'_>>
+) -> Result<Instance, InstanceError> { .. }
+
+let instance = entry.create_instance(&create_info, None)
+    .expect("Instance creation error");
+```
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="attachments/Pasted image 20231210191150.png" alt="" style="object-fit: scale-down">
+</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+### Comment je vais ray tracer ?
+
+- Zone de flou
+- RTX core ne seront pas utilisé
+- Idéalement l'API ray tracing de Vulkan
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 ## Plan anticipé
+
+<img src="attachments/Pasted image 20231210195746.png" alt="" style="width: 500px; object-fit: fill">
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 ## Calendrier de projet
+
+<img src="attachments/Pasted image 20231210204114.png" alt="" style="object-fit: scale-down">
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
