Fixed some stuff

--- a/proposition-travail-bachelor/index.html
+++ b/proposition-travail-bachelor/index.html
@@ -138,6 +138,7 @@ Ray tracing et Voxels
 ### Dans l'industrie
 
 - &shy;<!-- .element: class="fragment" data-fragment-index="1" -->Aucun ?
+- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->Amélioration personnelle
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
@@ -245,9 +246,9 @@ let instance = entry.create_instance(&create_info, None)
 
 ### Comment je vais ray tracer ?
 
-- Zone de flou
-- RTX core ne seront pas utilisé
-- Idéalement l'API ray tracing de Vulkan
+- &shy;<!-- .element: class="fragment" data-fragment-index="1" -->Zone de flou
+- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->RTX core ne seront pas utilisé
+- &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Idéalement l'API ray tracing de Vulkan
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
@@ -259,7 +260,7 @@ let instance = entry.create_instance(&create_info, None)
 
 ## Calendrier de projet
 
-<img src="attachments/Pasted image 20231210204114.png" alt="" style="object-fit: scale-down">
+<img src="attachments/Pasted image 20231210215542.png" alt="" style="object-fit: scale-down">
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
