--- a/proposition-travail-bachelor/index.html
+++ b/proposition-travail-bachelor/index.html
@@ -132,8 +132,8 @@ notes: expliquer voxel
 
 - &shy;<!-- .element: class="fragment" data-fragment-index="1" -->En lien avec mes objectifs (CG)
 - &shy;<!-- .element: class="fragment" data-fragment-index="2" -->Utilisation d'une API Graphique Moderne™
-- &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Utilisation du Ray Tracing
-- &shy;<!-- .element: class="fragment" data-fragment-index="4" -->Voxels aussi utilisé pour les mesh polygonaux
+- &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Utilisation du ray tracing
+- &shy;<!-- .element: class="fragment" data-fragment-index="4" -->Voxels aussi utilisés pour les mesh polygonaux
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
@@ -284,7 +284,7 @@ let instance = entry.create_instance(&create_info, None)
 ### Comment je vais ray tracer ?
 
 - &shy;<!-- .element: class="fragment" data-fragment-index="1" -->Zone de flou
-- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->RTX core ne seront pas utilisé
+- &shy;<!-- .element: class="fragment" data-fragment-index="2" -->RTX Core ne seront pas utilisés
 - &shy;<!-- .element: class="fragment" data-fragment-index="3" -->Idéalement l'API ray tracing de Vulkan
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
